--- a/shard.yml
+++ b/shard.yml
@@ -15,6 +15,11 @@ dependencies:
   stumpy_png:
     github: stumpycr/stumpy_png
 
+development_dependencies:
+  ameba:
+    github: veelenga/ameba
+    version: 0.8.1
+
 # development_dependencies:
 #   webmock:
 #     github: manastech/webmock.cr
